Networking with CNI Plugins/pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-3
  labels:
    app: test-pod-3
spec:
  containers:
  - name: alpine
    image: alpine:latest
    command: ['sleep', '3600']
    resources:
      requests:
        memory: "32Mi"
        cpu: "100m"
      limits:
        memory: "64Mi"
        cpu: "200m"
