Networking with CNI Plugins/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service-1
spec:
  selector:
    app: test-pod-1
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
